[package]
name = "drivers"
version = "0.1.0"
authors = ["ldl <746620536@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.7.0"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers" }
k210-pac = { git = "https://github.com/wyfcyx/k210-pac" }
k210-hal = { git = "https://github.com/wyfcyx/k210-hal" }
k210-soc = { git = "https://github.com/wyfcyx/k210-soc" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
easy-fs = { path = "../easy-fs" }
memory = { path = "../memory" }