[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memory = { path = "../memory" }
sbi = { path = "../sbi" }
os_core = { path = "../os_core" }

[features]
board_qemu = []
board_k210 = []